// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonFile adds a header comment 1`] = `
"// header
// comment
{
  \\"abc\\": 123
}
"
`;

exports[`JsonFile adds an empty header comment 1`] = `
"{
  \\"abc\\": 123
}
"
`;

exports[`JsonFile allows undefined values when asked 1`] = `
"{}
"
`;

exports[`JsonFile allows undefined values when asked 2`] = `
"{}
"
`;

exports[`JsonFile supports updating a simple file 1`] = `
"{\\"a\\": 1,\\"b\\": 2}
"
`;

exports[`JsonFile supports updating a simple file with a comment 1`] = `
"{
  // comment
  \\"a\\": 1,
  \\"b\\": 2
}
"
`;

exports[`JsonFile supports updating a simple file with a comment and a trailing comma 1`] = `
"{
  // comment
  \\"a\\": 1,
  \\"b\\": 2,
}
"
`;

exports[`JsonFile supports updating a simple file with an unquoted property 1`] = `
"{
  // comment
  a: 1,
  b: 2,
  \\"c-123\\": 3,
}
"
`;
